--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "mongodb": "^3.5.0",
+    "mongoose": "^5.8.7",
     "morgan": "^1.9.1",
     "pug": "^2.0.4"
   },
