--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^3.5.0",
     "mongoose": "^5.8.7",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "pug": "^2.0.4"
   },
   "scripts": {
