--- a/.gitignore
+++ b/.gitignore
@@ -146,4 +146,7 @@ temp/
 # Ignore all local history of files
 .history
 
+# Videos path
+videos
+
 # End of https://www.gitignore.io/api/node,macos,visualstudiocode
