--- a/.gitignore
+++ b/.gitignore
@@ -146,7 +146,7 @@ temp/
 # Ignore all local history of files
 .history
 
-# Videos path
+# Uploads path
 videos
-
+Uploads
 # End of https://www.gitignore.io/api/node,macos,visualstudiocode
