--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.21.2",
     "mongodb": "^3.5.0",
     "mongoose": "^5.8.7",
@@ -20,7 +21,8 @@
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 1.5",
-    "dev:assets": "webpack"
+    "dev:assets": "WEBPACK_ENV=development webpack",
+    "build:assets": "WEBPACK_ENV=production webpack"
   },
   "devDependencies": {
     "nodemon": "^2.0.2",
