--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "pug": "^2.0.4",
     "sass-loader": "^8.0.2",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "@babel/core": "^7.7.7",
+    "@babel/node": "^7.7.7",
+    "@babel/preset-env": "^7.7.7"
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 1.5",
@@ -33,9 +36,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.2",
-    "@babel/core": "^7.7.7",
-    "@babel/node": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0"
