--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "postcss-loader": "^3.0.0",
@@ -39,7 +40,8 @@
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 1.5",
     "dev:assets": "WEBPACK_ENV=development webpack -w",
-    "build:assets": "WEBPACK_ENV=production webpack"
+    "build:assets": "WEBPACK_ENV=production webpack",
+    "tunnel": "ngrok http 4000"
   },
   "devDependencies": {
     "nodemon": "^2.0.2",
