--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/node": "^7.7.7",
     "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.7.7",
+    "@babel/runtime": "^7.8.7",
     "autoprefixer": "^9.7.4",
     "aws-sdk": "^2.641.0",
     "axios": "^0.19.2",
@@ -21,6 +22,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "get-blob-duration": "^1.1.0",
     "helmet": "^3.21.2",
     "mongodb": "^3.5.0",
     "mongoose": "^5.8.7",
