--- a/.gitignore
+++ b/.gitignore
@@ -149,7 +149,8 @@ temp/
 # Uploads path
 videos
 Uploads
-
 # webpack static 폴더
 static
+
+build
 # End of https://www.gitignore.io/api/node,macos,visualstudiocode
