--- a/package.json
+++ b/package.json
@@ -44,14 +44,20 @@
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 1.5",
-    "dev:assets": "WEBPACK_ENV=development webpack -w",
-    "build:assets": "WEBPACK_ENV=production webpack",
-    "tunnel": "ngrok http 4000"
+    "dev:assets": "cd src && WEBPACK_ENV=development webpack -w",
+    "build:assets": "cd src && WEBPACK_ENV=production webpack",
+    "tunnel": "ngrok http 4000",
+    "build:server": "babel src --out-dir build --ignore 'src/assets','src/static','src/webpack.config.js'",
+    "prebuild": "rm -rf build",
+    "copyAll": "cp -R src/static build && cp -R src/views build",
+    "build": "npm run build:server && npm run build:assets && npm run copyAll",
+    "start": "node build/init.js"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2",
+    "@babel/cli": "^7.8.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.0"
+    "eslint-plugin-import": "^2.20.0",
+    "nodemon": "^2.0.2"
   }
 }
