--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "webpack-cli": "^3.3.10"
   },
   "scripts": {
-    "dev:server": "nodemon --exec babel-node init.js --delay 1.5",
+    "dev:server": "nodemon --exec babel-node src/init.js --delay 1.5",
     "dev:assets": "cd src && WEBPACK_ENV=development webpack -w",
     "build:assets": "cd src && WEBPACK_ENV=production webpack",
     "tunnel": "ngrok http 4000",
