--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "prebuild": "rm -rf build",
     "copyAll": "cp -R src/static build && cp -R src/views build",
     "build": "npm run build:server && npm run build:assets && npm run copyAll",
-    "start": "node build/init.js"
+    "start": "node build/init.js",
+    "prestart": "npm run build"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
